# app/Http/Requests/AddDeviceRequest.php
@@ -1,0 +1,32 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Validation\Rule;
+
+class AddDeviceRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'device_id' => 'required|string|max:255',
+            'device_name' => 'required|string|max:255',
+            'device_type' => ['required', Rule::in(['android', 'ios', 'web'])],
+            'fcm_token' => 'nullable|string|max:500',
+        ];
+    }
+}
